tests/specs/ecosystem/developer3/safe_keys/0_1_1.test
developer3/safe-keys/0.1.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'IDBFactory'.
    indexedDB: IDBFactory;
               ~~~~~~~~~~
    at file://<tmpdir>/lib/@types/keylocker.ts:15:16

TS2304 [ERROR]: Cannot find name 'IDBFactory'.
  public callDB(indexedDB: IDBFactory, call: (store: IDBObjectStore) => Promise<any>): Promise<true> {
                           ~~~~~~~~~~
    at file://<tmpdir>/lib/dom/index.ts:15:28

TS2304 [ERROR]: Cannot find name 'IDBObjectStore'.
  public callDB(indexedDB: IDBFactory, call: (store: IDBObjectStore) => Promise<any>): Promise<true> {
                                                     ~~~~~~~~~~~~~~
    at file://<tmpdir>/lib/dom/index.ts:15:54

Found 3 errors.

